k8s/login-app-yaml/login-pg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-app-ingress
  namespace: myapp
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"   # reference the self-signed issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - login-pg.local
    secretName: login-app-tls   # cert-manager will create this secret
  rules:
  - host: login-pg.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login-app-service
            port:
              number: 80
